# zstd-rs

./: .gitignore  Cargo.toml  search-index.js
examples/: bench.rs  bench_decoder.rs  bench_encoder.rs  corpus.rs
libc/: constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_NETLINK.html  constant.AF_PACKET.html  constant.AF_UNIX.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CBAUD.html  constant.CLOCAL.html  constant.CLOCK_MONOTONIC.html  constant.CLOCK_REALTIME.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  constant.CLONE_FS.html  constant.CLONE_IO.html  constant.CLONE_NEWIPC.html  constant.CLONE_NEWNET.html  constant.CLONE_NEWNS.html  constant.CLONE_NEWPID.html  constant.CLONE_NEWUSER.html  constant.CLONE_NEWUTS.html  constant.CLONE_PARENT.html  constant.CLONE_PARENT_SETTID.html  constant.CLONE_PTRACE.html  constant.CLONE_SETTLS.html  constant.CLONE_SIGHAND.html  constant.CLONE_SYSVSEM.html  constant.CLONE_THREAD.html  constant.CLONE_UNTRACED.html  constant.CLONE_VFORK.html  constant.CLONE_VM.html  constant.CODA_SUPER_MAGIC.html  constant.CPU_SETSIZE.html  constant.CR0.html  (+998 more)
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
zstd/: fn.compress.html  fn.compress_to_vec.html  fn.decode_all.html  fn.decompress.html  fn.decompress_to_vec.html  fn.encode_all.html  fn.train_dict.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Encoder.html
(+76 files in other folders)
