[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
build = "src/build.rs"
description = "Rust zstd bindings library."
documentation = "https://gyscos.github.io/zstd-rs/zstd/index.html"
license = "MIT"
name = "zstd"
repository = "https://github.com/Gyscos/zstd-rs"
version = "0.1.4"

[[bin]]
doc = false
name = "zstd"
test = false

[[bin]]
doc = false
name = "stream"
test = false

[[bin]]
doc = false
name = "train"
test = false

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"
rustc-serialize = "0.3.18"

[dependencies.clippy]
optional = true
version = "0.0.44"

[dev-dependencies]
clap = "2.1.2"
curl = "0.2.16"
time = "0.1.34"
zip = "0.1.16"

[features]
default = []

[[example]]
name = "bench_decoder"
path = "examples/bench_decoder.rs"

[[example]]
name = "bench_encoder"
path = "examples/bench_encoder.rs"
